# wavekat-core

./: CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml
.github/workflows/: ci.yml  release-plz.yml
crates/wavekat-core/: CHANGELOG.md  Cargo.toml
crates/wavekat-core/src/: audio.rs  error.rs  lib.rs
docs/: 01-wav-io.md  02-test-coverage.md  03-resample.md
